--- a/squid3.conf
+++ b/squid3.conf
@@ -26,7 +26,7 @@ acl Safe_ports port 280		# http-mgmt
 acl Safe_ports port 488		# gss-http
 acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
-acl CONNECT method CONNECT
+acl CONNECT method CONNECT HEAD POST GET
 
 acl SSH dst xxxxxxxxx-xxxxxxxxx/255.255.255.255
 http_access allow SSH
@@ -35,6 +35,8 @@ http_access deny manager
 http_access allow localhost
 http_access deny all
 http_port 8080
+http_access deny CONNECT !SSL_port
+
 coredump_dir /var/spool/squid3
 refresh_pattern ^ftp:		1440	20%	10080
 refresh_pattern ^gopher:	1440	0%	1440
